# universal-report-tool

./: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
docs/: word-engine-evaluation.md
patches/: easy-template-x+7.2.3.patch
scripts/: create-test-template.mjs  run-poc.mjs
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/src/commands/: excel_chart.rs  mod.rs
src-tauri/src/models/: chart_data.rs  error.rs  mod.rs
src-tauri/src/services/: chart_generator.rs  mod.rs
src-tauri/src/utils/: chart_type_mapper.rs  mod.rs
src/components/chart/: AnnotationPanel.tsx  ChartTypeSelector.tsx  ExportButton.tsx  ThemeSelector.tsx
src/components/common/: AppLayout.tsx  ErrorBoundary.tsx
src/components/excel/: ColumnMapper.tsx  DataPreview.tsx  ImportHistoryPanel.tsx  ImportWizard.tsx  SheetSelector.tsx
src/database/: index.ts  schema.ts
src/pages/: ChartDesignerPage.tsx  DataPage.tsx  ProjectPage.tsx  ReportPage.tsx  SettingsPage.tsx  TemplatePage.tsx
src/services/: chartConfigService.ts  chartExport.ts  excelExport.ts  importHistory.ts  reportGenerator.ts  wordEnginePoc.ts
src/stores/: chartStore.ts  dataStore.ts  projectStore.ts  templateStore.ts
src/themes/: businessBlue.ts  ecoGreen.ts  excelCompatible.ts  index.ts  luxuryGold.ts  partyRed.ts  techPurple.ts  themeManager.ts  types.ts
src/types/: chart.ts  index.ts
src/utils/: excelParser.ts  synonymDict.ts  templateMigrator.ts  testDataGenerator.ts
tests/integration/: TEST_CHECKLIST.md
(+19 files in other folders)
